--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -7,7 +7,7 @@
     <!-- School Information Section -->
     <div class="row">
         <div class="col-md-4">
-            <div class="card text-white bg-primary mb-3">
+            <div class="card text-white bg-success mb-3">
                 <div class="card-header">School Name</div>
                 <div class="card-body">
                     <h5 class="card-title">{{ school_name }}</h5>
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="card text-white bg-info mb-3">
+            <div class="card text-white bg-success mb-3">
                 <div class="card-header">Total Teachers</div>
                 <div class="card-body">
                     <h5 class="card-title">{{ teacher_count }}</h5>
@@ -37,7 +37,7 @@
         <!-- Students & Teachers Section -->
         <div class="col-md-4">
             <div class="card shadow">
-                <div class="card-header bg-dark text-white">Students & Teachers</div>
+                <div class="card-header bg-success text-white">Manage Students & Teachers</div>
                 <div class="card-body">
                     <a href="{{ url_for('main.classes') }}" class="btn btn-outline-primary btn-block">Manage Classes</a>
                     <a href="{{ url_for('main.students') }}" class="btn btn-outline-primary btn-block">Manage Students</a>
@@ -50,10 +50,10 @@
         <!-- Subjects & Assessments Section -->
         <div class="col-md-4">
             <div class="card shadow">
-                <div class="card-header bg-warning">Subjects & Assessments</div>
+                <div class="card-header bg-success text-white">Manage Subjects & Assessments</div>
                 <div class="card-body">
+                    <a href="{{ url_for('main.add_subject') }}" class="btn btn-outline-warning btn-block">Register Subject</a>
                     <a href="{{ url_for('main.subjects') }}" class="btn btn-outline-warning btn-block">Manage Subjects</a>
-                    <a href="{{ url_for('main.add_subject') }}" class="btn btn-outline-warning btn-block">Add Subject</a>
                     <a href="{{ url_for('main.assessments') }}" class="btn btn-outline-warning btn-block">View Assessments</a>
                     <a href="{{ url_for('main.add_assessment_score') }}" class="btn btn-outline-warning btn-block">Add Assessment Score</a>
                 </div>
@@ -63,23 +63,52 @@
         <!-- Fees Management Section -->
         <div class="col-md-4">
             <div class="card shadow">
-                <div class="card-header bg-danger text-white">Fees Management</div>
+                <div class="card-header bg-success text-white">Fees Management</div>
                 <div class="card-body">
                     <a href="{{ url_for('main.fee_components') }}" class="btn btn-outline-danger btn-block">View/Add Fee Components</a>
                     <a href="{{ url_for('main.view_class_fees') }}" class="btn btn-outline-danger btn-block">View Class Fees</a>
                     <a href="{{ url_for('main.view_class_fees') }}" class="btn btn-outline-danger btn-block">Assign Fees to Classes</a>
-                    <a href="{{ url_for('main.generate_fees') }}" class="btn btn-outline-danger btn-block">Generate/Print Class Fees</a>
-                    <a href="{{ url_for('main.record_payment') }}" class="btn btn-outline-danger btn-block">Record Payment</a>
+                    <a href="{{ url_for('main.generate_fees') }}" class="btn btn-outline-danger btn-block">Generate Class Fees</a>
+                    <!-- <a href="{{ url_for('main.record_payment') }}" class="btn btn-outline-danger btn-block">Record Payment</a> -->
                 </div>
             </div>
         </div>
+
+        <!-- Manage Student Results -->
+        <div class="col-md-4">
+            <div class="card shadow">
+                <div class="card-header bg-success text-white text-align-center">Manage Student Results</div>
+                <div class="card-body">
+                    <a href="{{ url_for('main.upload_signature') }}" class="btn btn-outline-primary btn-block">Enter Principal/Teachers Remarks on Results</a>
+                    <a href="{{ url_for('main.generate_results') }}" class="btn btn-outline-primary btn-block">Generate Student Results By Class</a>
+                    <a href="{{ url_for('main.list_students_result') }}" class="btn btn-outline-primary btn-block">View/Edit/Delete Students Results</a>
+                    <a href="{{ url_for('main.generate_fees') }}" class="btn btn-outline-primary btn-block">Generate Termly Class Fees</a>
+                    <!-- <a href="{{ url_for('main.record_payment') }}" class="btn btn-outline-danger btn-block">Record Payment</a> -->
+                </div>
+            </div>
+        </div>
+
+        <!-- Manage Student Class Attendance -->
+        <div class="col-md-4">
+            <div class="card shadow">
+                <div class="card-header bg-success text-white text-align-center">Manage Student Class Attendance</div>
+                <div class="card-body">
+                    <a href="{{ url_for('main.add_attendance') }}" class="btn btn-outline-primary btn-block">Record Students Class Attendance</a>
+                    <a href="{{ url_for('main.attendance') }}" class="btn btn-outline-primary btn-block">View/Edit/Delete Students Class Attendance</a>
+                    <!-- <a href="{{ url_for('main.list_students_result') }}" class="btn btn-outline-primary btn-block">View/Edit/Delete Students Results</a>
+                    <a href="{{ url_for('main.generate_fees') }}" class="btn btn-outline-primary btn-block">Generate Termly Class Fees</a> -->
+                    <!-- <a href="{{ url_for('main.record_payment') }}" class="btn btn-outline-danger btn-block">Record Payment</a> -->
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <!-- Export & School Registration -->
     <div class="row mt-4">
         <div class="col-md-6">
             <div class="card shadow">
-                <div class="card-header bg-secondary text-white">Reports</div>
+                <div class="card-header bg-success text-white">Reports</div>
                 <div class="card-body">
                     <a href="{{ url_for('main.generate_report', report_type='excel') }}" class="btn btn-outline-secondary btn-block">Export to Excel</a>
                     <a href="{{ url_for('main.generate_report', report_type='word') }}" class="btn btn-outline-secondary btn-block">Export to Word</a>
@@ -89,7 +118,7 @@
 
         <div class="col-md-6">
             <div class="card shadow">
-                <div class="card-header bg-info text-white">School User Registration</div>
+                <div class="card-header bg-success text-white">School User Registration</div>
                 <div class="card-body">
                     <a href="{{ url_for('main.register_user', school_code=school.registration_code, _external=True) }}" class="btn btn-outline-info btn-block">Register Users</a>
                 </div>
