--- a/app/templates/edit_schools.html
+++ b/app/templates/edit_schools.html
@@ -35,6 +35,7 @@
     <br><br>
     {{ form.phone_number.label }} {{ form.phone_number(class="form-control") }}<br><br>
     {{ form.website.label }} {{ form.website(class="form-control") }}<br><br>
+    {{ form.principal_name.label }} {{ form.principal_name(class="form-control") }}<br><br>
     {{ form.school_logo.label }} {{ form.school_logo }}<br><br>
 
     {{ form.submit(class="btn btn-primary") }}  </form>
