--- a/app/templates/register_school.html
+++ b/app/templates/register_school.html
@@ -65,6 +65,19 @@
             {% endif %}
         </div>
         <div class="form-group">
+            {{ form.principal_name.label(class="form-label") }}
+            <small class="form-text text-muted">Please use capital letters for the principal's name.</small>
+            {{ form.principal_name(class="form-control") }}
+            
+            {% if form.principal_name.errors %}
+                <ul class="errors">
+                    {% for error in form.principal_name.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        </div>
+        <div class="form-group">
             {{ form.school_logo.label(class="form-label") }}
             {{ form.school_logo(type="file", class="form-control-file") }}
             {% if form.school_logo.errors %}
