--- a/app/templates/add_student.html
+++ b/app/templates/add_student.html
@@ -1,6 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
+<style>
+    /* body {
+        font-family: Arial, sans-serif;
+        margin: 50px;
+    } */
+   .container {
+    margin-top: 230px;
+   }
+
+</style>
 <div class="container h-100 d-flex justify-content-center align-items-center">
     <div class="card shadow-sm p-4" style="width: 100%; max-width: 500px;">
         <h1 class="text-center mb-4">Add Student</h1>
